# test-platform-server-dev

./: .dockerignore  .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  uwsgi.ini
app/: __init__.py  command.py  database.py  hook.py
app/modules/: __init__.py
app/modules/messaging/: enum.py  model.py
app/modules/messaging/controller/: __init__.py  log_controller.py  notice_controller.py
app/modules/messaging/dao/: notice_bot_dao.py
app/modules/messaging/service/: __init__.py  log_service.py  notice_service.py
app/modules/opencenter/: enum.py  model.py
app/modules/opencenter/controller/: __init__.py  apilog_controller.py  application_controller.py  token_controller.py
app/modules/opencenter/dao/: access_token_dao.py  open_access_token_dao.py  open_application_dao.py
app/modules/opencenter/service/: apilog_service.py  application_service.py  token_service.py
app/modules/public/: model.py
app/modules/public/controller/: __init__.py  message_controller.py  tag_controller.py  workspace_controller.py  workspace_member_controller.py  workspace_restriction_controller.py
app/modules/public/service/: message_service.py  tag_service.py  workspace_restriction_service.py  workspace_service.py
app/modules/schedule/: event.py
app/modules/schedule/controller/: job_controller.py
app/modules/schedule/service/: job_service.py
app/modules/script/: model.py
app/modules/script/controller/: debug_controller.py  element_controller.py  execution_controller.py  history_controller.py  report_controller.py  testplan_controller.py  variables_controller.py
app/modules/script/dao/: element_component_dao.py  test_element_dao.py
app/modules/script/manager/: element_loader.py  element_manager.py
app/modules/script/service/: debug_service.py  element_service.py  execution_service.py  history_service.py  (+2 more)
app/modules/structure/: __init__.py  model.py
app/modules/system/: enum.py  model.py
app/modules/usercenter/: model.py
app/openapi/: __init__.py
app/signals/: __init__.py  element_reveiver.py  notice_reveiver.py  openapi_receiver.py  system_receiver.py
app/socketx/: default_handler.py
app/tools/: cache.py  exceptions.py  localvars.py  open_auth.py  parser.py  request.py  require.py  service.py  validator.py
app/utils/: jwt_util.py  sqlalchemy_util.py  time_util.py
app/utils/notice/: wecom.py
(+45 files in other folders)
